--- a/.github/workflows/django-check.yml
+++ b/.github/workflows/django-check.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test_django:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10  # ✅ Use a valid version (not 3.1)
+          python-version: 3.10
 
       - name: Install dependencies
         run: |
